New change to README.

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This project is serioiusly awesome.
+This project is awesome.
 
 This project will help treehouse students learn about the awesome git commands.
